docs/apache-airflow-providers-google/8.5.0/_sources/_api/tests/system/providers/google/cloud/vertex_ai/example_vertex_ai_model_service/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_model_service`
=======================================================================================

.. py:module:: tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_model_service

.. autoapi-nested-parse::

   Example Airflow DAG for Google Vertex AI service testing Model Service operations.



Module Contents
---------------

.. py:data:: ENV_ID
   

   

.. py:data:: PROJECT_ID
   

   

.. py:data:: DAG_ID
   :annotation: = vertex_ai_model_service_operations

   

.. py:data:: REGION
   :annotation: = us-central1

   

.. py:data:: TRAIN_DISPLAY_NAME
   

   

.. py:data:: MODEL_DISPLAY_NAME
   

   

.. py:data:: DATA_SAMPLE_GCS_BUCKET_NAME
   

   

.. py:data:: STAGING_BUCKET
   

   

.. py:data:: DATA_SAMPLE_GCS_OBJECT_NAME
   :annotation: = vertex-ai/california_housing_train.csv

   

.. py:data:: CSV_FILE_LOCAL_PATH
   :annotation: = /model_service/california_housing_train.csv

   

.. py:data:: RESOURCES_PATH
   

   

.. py:data:: CSV_ZIP_FILE_LOCAL_PATH
   

   

.. py:data:: TABULAR_DATASET
   

   

.. py:data:: CONTAINER_URI
   :annotation: = gcr.io/cloud-aiplatform/training/tf-cpu.2-2:latest

   

.. py:data:: LOCAL_TRAINING_SCRIPT_PATH
   :annotation: = /model_service/california_housing_training_script.py

   

.. py:data:: MODEL_OUTPUT_CONFIG
   

   

.. py:data:: MODEL_SERVING_CONTAINER_URI
   :annotation: = gcr.io/cloud-aiplatform/prediction/tf2-cpu.2-2:latest

   

.. py:data:: MODEL_OBJ
   

   

.. py:data:: create_bucket
   

   

.. py:data:: test_run
   

   

