docs/apache-airflow-providers-google/10.23.0/_sources/_api/tests/system/providers/google/cloud/vertex_ai/example_vertex_ai_model_service/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_model_service`
=======================================================================================

.. py:module:: tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_model_service

.. autoapi-nested-parse::

   Example Airflow DAG for Google Vertex AI service testing Model Service operations.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'vertex_ai_model_service_operations'

   

.. py:data:: REGION
   :value: 'us-central1'

   

.. py:data:: TRAIN_DISPLAY_NAME

   

.. py:data:: MODEL_DISPLAY_NAME

   

.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'airflow-system-tests-resources'

   

.. py:data:: DATA_SAMPLE_GCS_BUCKET_NAME

   

.. py:data:: STAGING_BUCKET

   

.. py:data:: DATA_SAMPLE_GCS_OBJECT_NAME
   :value: 'vertex-ai/california_housing_train.csv'

   

.. py:data:: TABULAR_DATASET

   

.. py:data:: CONTAINER_URI
   :value: 'gcr.io/cloud-aiplatform/training/tf-cpu.2-2:latest'

   

.. py:data:: IS_COMPOSER

   

.. py:data:: LOCAL_TRAINING_SCRIPT_PATH

   

.. py:data:: MODEL_OUTPUT_CONFIG

   

.. py:data:: MODEL_SERVING_CONTAINER_URI
   :value: 'gcr.io/cloud-aiplatform/prediction/tf2-cpu.2-2:latest'

   

.. py:data:: MODEL_OBJ

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

